# meshWarp2

./: .gitignore  .tauriignore  AGENTS.md  COMMON_PITFALL_F5_WEIGHTED_MESH.md  CONTRIBUTING.md  DEVELOPMENT_VERIFICATION_GUIDE.md  POSE_RUNTIME_SETUP.md  README.md  README.zh-TW.md  SPINE_FEATURE_GAP.md  TESTING.md  app.js  index.html  package.json  search_results.txt  stateMachineBridge.json  stateMachineBridgeSamples.txt  styles.css  tmp_diag.mjs  tmp_diag_path_project.json  tmp_e2e_attachment_test.mjs  tmp_e2e_attachment_types_export.json  tmp_e2e_attachment_types_test.mjs  tmp_e2e_bundle.atlas  tmp_e2e_bundle.skel  tmp_e2e_clip_source_project.json  tmp_e2e_constraint_skin_and_path_chain_export_test.mjs  tmp_e2e_constraint_skin_export.json  tmp_e2e_constraint_skin_project.json  tmp_e2e_deform_slot_project.json  tmp_e2e_deform_slot_test.mjs  tmp_e2e_draworder_project.json  tmp_e2e_export.json  tmp_e2e_ik_loop_project.json  tmp_e2e_ik_loop_test.mjs  tmp_e2e_inherit_export.json  tmp_e2e_inherit_project.json  tmp_e2e_inherit_test.mjs  tmp_e2e_layer_enabled_project.json  tmp_e2e_layer_project.json  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md
_poolside_parts/: parts_meta.json
app/: README.md
backup/: app.js  index.html
mcp-server/: README.md  animation-editor-mcp.js  demo-client.js
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
tools/: audit-puppet-warp.js  check-ai-bone-tools.js  check-ai-capture-image.js  check-ai-capture-mesh.js  check-ai-capture-raw-input.js  (+62 more)
(+82 files in other folders)
