[package]
name = "animation-editor"
version = "0.1.0"
description = "Browser-based 2D skeletal animation editor (Spine 4.x compatible) packaged as a desktop app."
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "animation_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
